--- a/style.css
+++ b/style.css
@@ -1,23 +1,14 @@
 *{
     margin: 0%;
     padding: 0%;
-    box-sizing: border-box;
+    
 }
 
-html,body{
-    height: 100%;
-    width: 100%;
-
-}
-
-#main{
-    height: 100%;
-    width: 100%;
-   }
 
 
-   #header{
-    height: 12%;
+
+   .header{
+    height: 75px;
     width: 100%;
     background-color: rgb(23, 172, 218);
     justify-content: center;
@@ -34,10 +25,10 @@ html,body{
 
  .img{
     margin-left: 10px;
-    height: 12%;
+    height: 25px;
     width: 20;
     background-color: transparent;
-    margin-top: -13px;
+    margin-top: -27px;
  }
 
  .img2{
@@ -62,6 +53,8 @@ html,body{
     justify-content: center;
     margin-left: 3%;
  }
+
+
 #copyright{
        width: 100%;
     height: 10%;
