--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
 
 #copyright{
        width: 100%;
-    height: 10%;
+    height: 60px;
     background-color: rgb(5, 5, 5);
     display: flex;
     align-items: center;
